[package]
name = "elf-loader-nostd"
version = "0.1.0"
edition = "2021"
authors = ["Matt Gates <matt@ridgecellrepair.com>"]
license = "MIT OR Apache-2.0"
description = "no_std ELF64 binary loader with PIE/ASLR support in Rust"
repository = "https://github.com/suhteevah/elf-loader-nostd"
keywords = ["elf", "loader", "binary", "no_std", "bare-metal"]
categories = ["no-std", "os", "embedded"]
readme = "README.md"

[dependencies]
log = { version = "0.4", default-features = false }
